# CourseworkBase

./: .gitignore  CMakeLists.txt  CourseworkBase.sln  README.TXT  README_MAC_LINUX.TXT
CourseworkBase/: CourseworkBase.vcxproj  CourseworkBase.vcxproj.filters  header.h  mainfunction.cpp
CourseworkBase/include/: Psyhm9Enemy.h  Psyhm9Game.h  Psyhm9Level.h  Psyhm9Player.h  Psyhm9TileManager.h
CourseworkBase/include/demos/advanced/: StarfieldDemo.h
CourseworkBase/include/framework/: BaseEngine.h  DrawingSurface.h  RawImageData.h  SimpleImage.h
CourseworkBase/resources/levels/: Psyhm9_level1.txt  Psyhm9_level2.txt  Psyhm9_level3.txt  Psyhm9_level4.txt  Psyhm9_level5.txt
CourseworkBase/src/: Psyhm9Enemy.cpp  Psyhm9Game.cpp  Psyhm9Level.cpp  Psyhm9Player.cpp  Psyhm9TileManager.cpp
CourseworkBase/src/demos/advanced/: StarfieldDemo.cpp  ZoomingDemo.cpp
CourseworkBase/src/framework/: BaseEngine.cpp  DrawingSurface.cpp  FontManager.cpp  SimpleImage.cpp
